@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.159 2005/04/29 16:35:37 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.160 2005/04/30 05:41:24 agaffney Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
+
+  20 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  More dirty rsync hacks :-/
 
   29 Apr 2005; Preston Cody <codeman@gentoo.org>
   Patches from chotchki (bug #90325) to improve CC networking.  untested.
